force-app/main/default/objects/OW_review__c/fields/Update_Voyant__c.field-meta.xml
<CustomField>
    <fullName>Update_Voyant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox relating to updating voyant.</description>
    <label>Update voyant</label>
    <type>Checkbox</type>
</CustomField>