force-app/main/default/objects/OW_review__c/fields/Voyant_4_Eye_Planner__c.field-meta.xml
<CustomField>
    <fullName>Voyant_4_Eye_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the user who was the planner that 4eyed Voyant.</description>
    <label>Voyant 4 eye planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Review_4_Eye_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>