force-app/main/default/objects/OW_review__c/fields/X4_Eye_Comments__c.field-meta.xml
<CustomField>
    <fullName>X4_Eye_Comments__c</fullName>
    <description>A text field to store additional comments.</description>
    <label>Additional comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>