force-app/main/default/objects/OW_review__c/fields/X4_Eye_Planner__c.field-meta.xml
<CustomField>
    <fullName>X4_Eye_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>4 Eye Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>