force-app/main/default/objects/OW_review__c/fields/X4_Eye_Voyant_Comments__c.field-meta.xml
<CustomField>
    <fullName>X4_Eye_Voyant_Comments__c</fullName>
    <label>4 Eye Voyant Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>