force-app/main/default/objects/OW_review__c/fields/X6_Month_Cash_Phasing__c.field-meta.xml
<CustomField>
    <fullName>X6_Month_Cash_Phasing__c</fullName>
    <description>A picklist to show if 6 month cash phasing was accepted, rejected or not applicable.</description>
    <label>6 month cash phasing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>