force-app/main/default/objects/OW_review__c/recordTypes/OW_annual_review.recordType-meta.xml
<RecordType>
    <fullName>OW_annual_review</fullName>
    <active>true</active>
    <label>Annual review</label>
</RecordType>