force-app/main/default/objects/OW_review__c/validationRules/AdviceRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AdviceRequired</fullName>
    <active>true</active>
    <description>This rule ensures that advice is linked to the annual review by the time it moves to the provide advice stage. The advice must also be linked when the annual review is complete to ensure this stage is not skipped but not when it&apos;s closed otherwise.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
ISBLANK( OW_advice__c ) &amp;&amp;
ISCHANGED( OW_status__c ) &amp;&amp; 
NOT((ISPICKVAL(OW_status__c, &quot;Prepare&quot; )))&amp;&amp; 
NOT((ISPICKVAL(OW_status__c, &quot;Closed&quot; )))</errorConditionFormula>
    <errorDisplayField>OW_advice__c</errorDisplayField>
    <errorMessage>You must link this review record to advice before moving beyond the prepare stage.</errorMessage>
</ValidationRule>