force-app/main/default/objects/OW_review__c/validationRules/ClosedReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedReasonRequired</fullName>
    <active>true</active>
    <description>This rule ensures that a closed reason is required if the review is marked as closed.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
ISPICKVAL(OW_status__c, &quot;Closed&quot;) &amp;&amp; 
ISPICKVAL( OW_closed_reason__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>OW_closed_reason__c</errorDisplayField>
    <errorMessage>Please add a closed reason.</errorMessage>
</ValidationRule>