force-app/main/default/objects/OW_review__c/validationRules/FactFindOutcomeNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>FactFindOutcomeNeeded</fullName>
    <active>true</active>
    <description>This rule ensures that we have a completed fact find back from the customer prior to moving the review past the fact find stage. Else, we must have skipped the fact find.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
(ISPICKVAL(OW_status__c, &quot;Provide advice&quot;) ||
ISPICKVAL(OW_status__c, &quot;Complete&quot;)) &amp;&amp;
NOT(ISPICKVAL( OW_review_fact_find_status__c, &quot;Skipped&quot; ) ||
ISPICKVAL( OW_review_fact_find_status__c, &quot;Incomplete&quot; ) ||
ISPICKVAL( OW_review_fact_find_status__c, &quot;Complete&quot; ))</errorConditionFormula>
    <errorDisplayField>OW_review_fact_find_status__c</errorDisplayField>
    <errorMessage>Review fact find outcome required.</errorMessage>
</ValidationRule>