force-app/main/default/objects/OW_review__c/validationRules/HouseholdCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>HouseholdCannotChange</fullName>
    <active>true</active>
    <description>This rule ensures that reviews cannot be reparented to different households.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
NOT(ISNEW()) &amp;&amp;
ISCHANGED(OW_household__c)</errorConditionFormula>
    <errorDisplayField>OW_household__c</errorDisplayField>
    <errorMessage>You cannot change the household that this review is linked to.</errorMessage>
</ValidationRule>