force-app/main/default/objects/OW_review__c/validationRules/OW_closed_reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_closed_reason_required</fullName>
    <active>true</active>
    <description>This rule ensures that a closed reason is required if the review is marked as closed.</description>
    <errorConditionFormula>ISPICKVAL(OW_status__c, &quot;Closed&quot;)

&amp;&amp; 

ISPICKVAL( OW_closed_reason__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>OW_closed_reason__c</errorDisplayField>
    <errorMessage>Please add a closed reason.</errorMessage>
</ValidationRule>