force-app/main/default/objects/OW_review__c/validationRules/OW_completion_review_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_completion_review_date_required</fullName>
    <active>true</active>
    <description>Ensures that a review date is recorded for the review prior completing it.</description>
    <errorConditionFormula>ISPICKVAL( OW_status__c, &quot;Complete&quot; )

&amp;&amp; 

ISBLANK(  OW_review_date__c )</errorConditionFormula>
    <errorDisplayField>OW_review_date__c</errorDisplayField>
    <errorMessage>A review date must be recorded prior to completing the review. This is controlled from the advice by setting the suitability meeting date/time.</errorMessage>
</ValidationRule>