force-app/main/default/objects/OW_review__c/validationRules/OW_fact_find_not_completed_manually.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_fact_find_not_completed_manually</fullName>
    <active>true</active>
    <description>This rule ensures that a fact find is not completed manually by a user.</description>
    <errorConditionFormula>ISPICKVAL( OW_review_fact_find_status__c, &quot;Complete&quot; )

&amp;&amp; 

ISCHANGED( OW_review_fact_find_status__c )

&amp;&amp; 

ISBLANK( OW_completed_by_client__c )</errorConditionFormula>
    <errorDisplayField>OW_review_fact_find_status__c</errorDisplayField>
    <errorMessage>You cannot mark the review fact find complete manually. This will be done automatically when the customer submits their response.</errorMessage>
</ValidationRule>