force-app/main/default/objects/OW_review__c/validationRules/OW_setup_required_1.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_setup_required_1</fullName>
    <active>false</active>
    <description>This rule ensures that the notes for partner field is completed prior to moving to the catch up stage.</description>
    <errorConditionFormula>ISPICKVAL(OW_status__c, &quot;Catch up&quot;)

&amp;&amp; 

ISBLANK( OW_notes_for_partner__c )</errorConditionFormula>
    <errorDisplayField>OW_notes_for_partner__c</errorDisplayField>
    <errorMessage>Please add notes for the partner prior to moving to the catch up stage.</errorMessage>
</ValidationRule>