force-app/main/default/objects/OW_review__c/validationRules/ReviewFactFindCompleteDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ReviewFactFindCompleteDateRequired</fullName>
    <active>true</active>
    <description>Ensures that a review date is recorded for the review prior completing it.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
ISPICKVAL( OW_status__c, &quot;Complete&quot; ) &amp;&amp;
ISBLANK(  OW_review_date__c )</errorConditionFormula>
    <errorDisplayField>OW_review_date__c</errorDisplayField>
    <errorMessage>A review date must be recorded prior to completing the review. This is controlled from the advice by setting the suitability meeting date/time.</errorMessage>
</ValidationRule>