force-app/main/default/objects/OW_review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OW_status__c</columns>
    <columns>OW_household__c</columns>
    <columns>OW_review_date__c</columns>
    <columns>OW_due_date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>All</label>
</ListView>